add predictor with web ui

--- a/detect_bot/templates/index.html
+++ b/detect_bot/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Detect-a-bot</h1>
-    <form action="{% url 'index:analyse' %}" method="post">
+    <form action="{% url 'analyse' %}" method="post">
         {% csrf_token %}
         <input type="text" name="accountURL" id="accountURL" placeholder="Twitter Account URL">
         <input type="submit" value="Analyse">
