add dropout and early stopping

--- a/detect_bot/templates/analyse.html
+++ b/detect_bot/templates/analyse.html
@@ -5,6 +5,6 @@
     <title>Analysis for {{ account_name }}</title>
 </head>
 <body>
-    <h1>{{ account_name }} is a {{ prediction }}</h1>
+    <h1>{{ account_name }} is a {{ prediction }} ({{ classification }} {{ confidence }}% certain)</h1>
 </body>
 </html>
