--- a/detect_bot/templates/analyse.html
+++ b/detect_bot/templates/analyse.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Analysis for {{ account_name }}</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    {% load static %}
+    <link rel="stylesheet" href="{% static "global.css" %}">
 </head>
 <body>
-    <h1>{{ account_name }} is a {{ prediction }} ({{ classification }} {{ confidence }}% certain)</h1>
+<div class="container">
+    <div class="row align-items-center">
+        <h1>Detect-a-bot</h1>
+        <div class="container">
+            <h2>{{ account_name }} is a {{ prediction }} ({{ classification }} {{ confidence }}% certain)</h2>
+        </div>
+        <div class="container">
+            <form action="{% url 'analyse' %}" method="post">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="accountURL">Username</label>
+                    <input type="text" name="accountURL" id="accountURL" class="form-control">
+                    <input type="submit" value="Analyse" class="btn btn-primary">
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 </body>
 </html>
