--- a/detect_bot/templates/analyse.html
+++ b/detect_bot/templates/analyse.html
@@ -12,9 +12,9 @@
 <body>
 <div class="container">
     <div class="row align-items-center">
-        <h1>Detect-a-bot</h1>
+        <h1><a href="{% url 'index' %}">Detect-a-bot</a></h1>
         <div class="container">
-            <h2>{{ account_name }} is a {{ prediction }} ({{ classification }} {{ confidence }}% certain)</h2>
+            <h2> {{ account_name }} is {{ prediction }} ({{ confidence }}% certain)</h2>
         </div>
         <div class="container">
             <form action="{% url 'analyse' %}" method="post">
